# alx-higher_level_programming

./: pyproject.toml
0x00-python-hello_world/: 10-check_cycle.c  5-print_string.py  7-edges.py
0x01-python-if_else_loops_functions/: 0-positive_or_negative.py  1-last_digit.py  100-print_tebahpla.py  12-main.py  13-insert_node.c  13-insert_number.c  13-main.c  3-print_alphabt.py  4-print_hexa.py  5-print_comb2.py  6-print_comb3.py  7-islower.py  8-uppercase.py  9-print_last_digit.py  linked_lists.c  lists.h
0x03-python-data_structures/: 0-print_list_integer.py  11-delete_at.py  3-print_reversed_list_integer.py  4-new_in_list.py  5-no_c.py  6-print_matrix_integer.py  7-add_tuple.py  8-multiple_returns.py  9-max_integer.py
0x04-python-more_data_structures/: 0-square_matrix_simple.py
0x10-python-network_0/: 0-body_size.sh  1-body.sh  100-status_code.sh  101-post_json.sh  102-catch_me.sh  3-methods.sh
0x15-javascript-web_jquery/: 102-script.js  103-script.js  2-script.js  3-script.js  4-script.js  6-script.js  8-script.js  9-script.js
